// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel integration tests is a snapshot with English localization 1`] = `
<div
  aria-live="polite"
  aria-roledescription="carousel"
  class="overflow-hidden relative  "
  data-testid="test-carousel"
  role="region"
>
  <div
    class="flex overflow-x-auto overflow-y-hidden snap-mandatory snap-x no-scrollbar "
    data-testid="test-carousel-container"
    id=":ri:-container"
  >
    <div
      aria-roledescription="slide"
      class="overflow-hidden flex-shrink-0 flex-grow-0"
      role="group"
      style="margin-right: 0px; flex-basis: calc(100% - 0px); scroll-snap-align: start; scroll-snap-stop: always;"
    >
      <div>
        index: 
        0
      </div>
    </div>
    <div
      aria-roledescription="slide"
      class="overflow-hidden flex-shrink-0 flex-grow-0"
      role="group"
      style="margin-right: 0px; flex-basis: calc(100% - 0px); scroll-snap-align: start; scroll-snap-stop: always;"
    >
      <div>
        index: 
        1
      </div>
    </div>
    <div
      aria-roledescription="slide"
      class="overflow-hidden flex-shrink-0 flex-grow-0"
      role="group"
      style="margin-right: 0px; flex-basis: calc(100% - 0px); scroll-snap-align: start; scroll-snap-stop: always;"
    >
      <div>
        index: 
        2
      </div>
    </div>
    <div
      aria-roledescription="slide"
      class="overflow-hidden flex-shrink-0 flex-grow-0"
      role="group"
      style="margin-right: 0px; flex-basis: calc(100% - 0px); scroll-snap-align: start; scroll-snap-stop: always;"
    >
      <div>
        index: 
        3
      </div>
    </div>
    <div
      aria-roledescription="slide"
      class="overflow-hidden flex-shrink-0 flex-grow-0"
      role="group"
      style="margin-right: 0px; flex-basis: calc(100% - 0px); scroll-snap-align: start; scroll-snap-stop: always;"
    >
      <div>
        index: 
        4
      </div>
    </div>
    <div
      aria-roledescription="slide"
      class="overflow-hidden flex-shrink-0 flex-grow-0"
      role="group"
      style="margin-right: 0px; flex-basis: calc(100% - 0px); scroll-snap-align: start; scroll-snap-stop: always;"
    >
      <div>
        index: 
        5
      </div>
    </div>
    <div
      aria-roledescription="slide"
      class="overflow-hidden flex-shrink-0 flex-grow-0"
      role="group"
      style="margin-right: 0px; flex-basis: calc(100% - 0px); scroll-snap-align: start; scroll-snap-stop: always;"
    >
      <div>
        index: 
        6
      </div>
    </div>
    <div
      aria-roledescription="slide"
      class="overflow-hidden flex-shrink-0 flex-grow-0"
      role="group"
      style="margin-right: 0px; flex-basis: calc(100% - 0px); scroll-snap-align: start; scroll-snap-stop: always;"
    >
      <div>
        index: 
        7
      </div>
    </div>
    <div
      aria-roledescription="slide"
      class="overflow-hidden flex-shrink-0 flex-grow-0"
      role="group"
      style="margin-right: 0px; flex-basis: calc(100% - 0px); scroll-snap-align: start; scroll-snap-stop: always;"
    >
      <div>
        index: 
        8
      </div>
    </div>
    <div
      aria-roledescription="slide"
      class="overflow-hidden flex-shrink-0 flex-grow-0"
      role="group"
      style="margin-right: 0px; flex-basis: calc(100% - 0px); scroll-snap-align: start; scroll-snap-stop: always;"
    >
      <div>
        index: 
        9
      </div>
    </div>
  </div>
  <button
    aria-controls=":ri:-container"
    class="p-2 md:p-1 absolute z-100 -translate-y-1/2 bg-neutral-300/80 enabled:hover:bg-neutral-300/[0.85] enabled:active:bg-neutral-300/90 dark:bg-dark-neutral-300/80 dark:enabled:hover:bg-dark-neutral-300/[0.85] dark:enabled:active:bg-dark-neutral-300/90 text-blue-700 enabled:hover:text-blue-800 enabled:active:text-blue-900 dark:text-blue-300 dark:enabled:hover:text-blue-400 dark:enabled:active:text-blue-500 transition-[color,background-color,opacity] duration-150 disabled:opacity-disabled disabled:cursor-not-allowed left-[0.625rem] top-[calc(50%-36px)]"
    disabled=""
  >
    <svg
      class="w-6 h-6 md:w-10 md:h-10"
      viewBox="0 0 32 32"
    >
      <use
        href="/assets/icons/back-arrow.svg#back-arrow"
      />
    </svg>
    <span
      class="sr-only"
    >
      Previous slide
    </span>
  </button>
  <button
    aria-controls=":ri:-container"
    class="p-2 md:p-1 absolute z-100 -translate-y-1/2 bg-neutral-300/80 enabled:hover:bg-neutral-300/[0.85] enabled:active:bg-neutral-300/90 dark:bg-dark-neutral-300/80 dark:enabled:hover:bg-dark-neutral-300/[0.85] dark:enabled:active:bg-dark-neutral-300/90 text-blue-700 enabled:hover:text-blue-800 enabled:active:text-blue-900 dark:text-blue-300 dark:enabled:hover:text-blue-400 dark:enabled:active:text-blue-500 transition-[color,background-color,opacity] duration-150 disabled:opacity-disabled disabled:cursor-not-allowed right-[0.625rem] top-[calc(50%-36px)]"
  >
    <svg
      class="w-6 h-6 md:w-10 md:h-10"
      viewBox="0 0 32 32"
    >
      <use
        href="/assets/icons/forward-arrow.svg#forward-arrow"
      />
    </svg>
    <span
      class="sr-only"
    >
      Next slide
    </span>
  </button>
  <div
    class="w-full flex justify-center items-center text-center text-200 text-neutral-1000 dark:text-dark-neutral-1000 transition-colors duration-150  "
  >
    <span>
      1
    </span>
    <span
      class="mx-1"
    >
      /
    </span>
    <span>
      10
    </span>
  </div>
</div>
`;

exports[`Carousel integration tests is a snapshot with Russian localization 1`] = `
<div
  aria-live="polite"
  aria-roledescription="carousel"
  class="overflow-hidden relative  "
  data-testid="test-carousel"
  role="region"
>
  <div
    class="flex overflow-x-auto overflow-y-hidden snap-mandatory snap-x no-scrollbar "
    data-testid="test-carousel-container"
    id=":rj:-container"
  >
    <div
      aria-roledescription="slide"
      class="overflow-hidden flex-shrink-0 flex-grow-0"
      role="group"
      style="margin-right: 0px; flex-basis: calc(100% - 0px); scroll-snap-align: start; scroll-snap-stop: always;"
    >
      <div>
        index: 
        0
      </div>
    </div>
    <div
      aria-roledescription="slide"
      class="overflow-hidden flex-shrink-0 flex-grow-0"
      role="group"
      style="margin-right: 0px; flex-basis: calc(100% - 0px); scroll-snap-align: start; scroll-snap-stop: always;"
    >
      <div>
        index: 
        1
      </div>
    </div>
    <div
      aria-roledescription="slide"
      class="overflow-hidden flex-shrink-0 flex-grow-0"
      role="group"
      style="margin-right: 0px; flex-basis: calc(100% - 0px); scroll-snap-align: start; scroll-snap-stop: always;"
    >
      <div>
        index: 
        2
      </div>
    </div>
    <div
      aria-roledescription="slide"
      class="overflow-hidden flex-shrink-0 flex-grow-0"
      role="group"
      style="margin-right: 0px; flex-basis: calc(100% - 0px); scroll-snap-align: start; scroll-snap-stop: always;"
    >
      <div>
        index: 
        3
      </div>
    </div>
    <div
      aria-roledescription="slide"
      class="overflow-hidden flex-shrink-0 flex-grow-0"
      role="group"
      style="margin-right: 0px; flex-basis: calc(100% - 0px); scroll-snap-align: start; scroll-snap-stop: always;"
    >
      <div>
        index: 
        4
      </div>
    </div>
    <div
      aria-roledescription="slide"
      class="overflow-hidden flex-shrink-0 flex-grow-0"
      role="group"
      style="margin-right: 0px; flex-basis: calc(100% - 0px); scroll-snap-align: start; scroll-snap-stop: always;"
    >
      <div>
        index: 
        5
      </div>
    </div>
    <div
      aria-roledescription="slide"
      class="overflow-hidden flex-shrink-0 flex-grow-0"
      role="group"
      style="margin-right: 0px; flex-basis: calc(100% - 0px); scroll-snap-align: start; scroll-snap-stop: always;"
    >
      <div>
        index: 
        6
      </div>
    </div>
    <div
      aria-roledescription="slide"
      class="overflow-hidden flex-shrink-0 flex-grow-0"
      role="group"
      style="margin-right: 0px; flex-basis: calc(100% - 0px); scroll-snap-align: start; scroll-snap-stop: always;"
    >
      <div>
        index: 
        7
      </div>
    </div>
    <div
      aria-roledescription="slide"
      class="overflow-hidden flex-shrink-0 flex-grow-0"
      role="group"
      style="margin-right: 0px; flex-basis: calc(100% - 0px); scroll-snap-align: start; scroll-snap-stop: always;"
    >
      <div>
        index: 
        8
      </div>
    </div>
    <div
      aria-roledescription="slide"
      class="overflow-hidden flex-shrink-0 flex-grow-0"
      role="group"
      style="margin-right: 0px; flex-basis: calc(100% - 0px); scroll-snap-align: start; scroll-snap-stop: always;"
    >
      <div>
        index: 
        9
      </div>
    </div>
  </div>
  <button
    aria-controls=":rj:-container"
    class="p-2 md:p-1 absolute z-100 -translate-y-1/2 bg-neutral-300/80 enabled:hover:bg-neutral-300/[0.85] enabled:active:bg-neutral-300/90 dark:bg-dark-neutral-300/80 dark:enabled:hover:bg-dark-neutral-300/[0.85] dark:enabled:active:bg-dark-neutral-300/90 text-blue-700 enabled:hover:text-blue-800 enabled:active:text-blue-900 dark:text-blue-300 dark:enabled:hover:text-blue-400 dark:enabled:active:text-blue-500 transition-[color,background-color,opacity] duration-150 disabled:opacity-disabled disabled:cursor-not-allowed left-[0.625rem] top-[calc(50%-36px)]"
    disabled=""
  >
    <svg
      class="w-6 h-6 md:w-10 md:h-10"
      viewBox="0 0 32 32"
    >
      <use
        href="/assets/icons/back-arrow.svg#back-arrow"
      />
    </svg>
    <span
      class="sr-only"
    >
      Предыдущий слайд
    </span>
  </button>
  <button
    aria-controls=":rj:-container"
    class="p-2 md:p-1 absolute z-100 -translate-y-1/2 bg-neutral-300/80 enabled:hover:bg-neutral-300/[0.85] enabled:active:bg-neutral-300/90 dark:bg-dark-neutral-300/80 dark:enabled:hover:bg-dark-neutral-300/[0.85] dark:enabled:active:bg-dark-neutral-300/90 text-blue-700 enabled:hover:text-blue-800 enabled:active:text-blue-900 dark:text-blue-300 dark:enabled:hover:text-blue-400 dark:enabled:active:text-blue-500 transition-[color,background-color,opacity] duration-150 disabled:opacity-disabled disabled:cursor-not-allowed right-[0.625rem] top-[calc(50%-36px)]"
  >
    <svg
      class="w-6 h-6 md:w-10 md:h-10"
      viewBox="0 0 32 32"
    >
      <use
        href="/assets/icons/forward-arrow.svg#forward-arrow"
      />
    </svg>
    <span
      class="sr-only"
    >
      Следующий слайд
    </span>
  </button>
  <div
    class="w-full flex justify-center items-center text-center text-200 text-neutral-1000 dark:text-dark-neutral-1000 transition-colors duration-150  "
  >
    <span>
      1
    </span>
    <span
      class="mx-1"
    >
      /
    </span>
    <span>
      10
    </span>
  </div>
</div>
`;
